@@ -33,6 +33,7 @@
  </stability>
  <license uri="http://www.horde.org/licenses/gpl">GPL-2.0</license>
  <notes>
+* [mms] Allow the active search query to be edited in the smartmobile view.
 * [mms] Add link to exit out of search view in smartmobile view into the original mailbox.
 * [mms] Allow default special mailbox names to be overriden by a backend.
 * [mms] Move fixed mailbox configuration into backends.php.
